--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   text-align: center;
 }
 
-.nav a {
+a {
   color: white;
   text-decoration: none;
 }
@@ -111,21 +111,69 @@ input {
   margin: 2rem auto;
   width: 90%;
   border: 3px solid #2c3e50;
+  border-radius: 4px;
+  text-align: center;
 }
 
 .thumbnail {
+  cursor: pointer;
+  height: 100%;
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  padding-bottom: 5px;
+  pointer-events: none
 }
 
 .gallery {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-
   width: 100%;
 }
+
+.full-size {
+  color: #2c3e50;
+}
+
+/* MODAL OVELAY */
+
+.modal-overlay {
+ position: fixed;
+ top: 0;
+ left: 0;
+ z-index: 10  ;
+ width: 100%;
+ height: 100%;
+ background: rgba(21,21,21,.75);
+}
+
+.modal-body {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ z-index: 11;
+ padding: 0;
+ overflow: auto;
+ transform: translate(-50%, -50%);
+}
+
+.modal-body img {
+  width: 100%;
+}
+
+.modal-close {
+ position: absolute;
+ top: 0;
+ right: 8px;
+ font-size: 1.5rem;
+ transition: all .25s ease-in-out;
+ }
+
+ .modal-close:focus, .modal-close:hover {
+  color: #2c3e50;
+ }
+
+/* MEDIA QUERIES */
 
 @media screen and (min-width: 900px) {
   .header p {
@@ -145,6 +193,15 @@ input {
 
   .header {
     font-size: 1.1em;
+  }
+
+  .full-size {
+    display: none;
+  }
+
+  .thumbnail {
+    padding-bottom: 0;
+    pointer-events: auto;
   }
 }
 
