--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ a {
 }
 
 .links {
-  font-size: .9em;
+  font-size: 0.9em;
   display: flex;
   list-style: none;
   position: absolute;
@@ -44,7 +44,12 @@ a {
 
 /* SLIDESHOW */
 
-.scroll-components, .still {
+#speed {
+  direction: rtl;
+}
+
+.scroll-components,
+.still {
   display: flex;
 }
 
@@ -77,14 +82,15 @@ button {
   border: 2px solid #2c3e50;
   border-radius: 12px;
   position: relative;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 button:active {
   transform: translateY(4px);
 }
 
-#prev, #next {
+#prev,
+#next {
   position: relative;
   top: 40%;
 }
@@ -121,7 +127,7 @@ input {
   object-fit: cover;
   width: 100%;
   padding-bottom: 5px;
-  pointer-events: none
+  pointer-events: none;
 }
 
 .gallery {
@@ -134,7 +140,7 @@ input {
   font-size: 0.8em;
 }
 
-.gallery-view > ul{
+.gallery-view > ul {
   display: flex;
   font-size: 2em;
   list-style: none;
@@ -175,23 +181,23 @@ input {
 /* MODAL OVELAY */
 
 .modal-overlay {
- position: fixed;
- top: 0;
- left: 0;
- z-index: 10  ;
- width: 100%;
- height: 100%;
- background: rgba(21,21,21,.75);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background: rgba(21, 21, 21, 0.75);
 }
 
 .modal-body {
- position: absolute;
- top: 50%;
- left: 50%;
- z-index: 11;
- padding: 0;
- overflow: auto;
- transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 11;
+  padding: 0;
+  overflow: auto;
+  transform: translate(-50%, -50%);
 }
 
 .modal-body img {
@@ -199,19 +205,20 @@ input {
 }
 
 .modal-close {
- position: absolute;
- background-color: transparent;
- border: none;
- color: white;
- top: 0;
- right: 8px;
- font-size: 1.5rem;
- transition: all .25s ease-in-out;
- }
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  color: white;
+  top: 0;
+  right: 8px;
+  font-size: 1.5rem;
+  transition: all 0.25s ease-in-out;
+}
 
- .modal-close:focus, .modal-close:hover {
+.modal-close:focus,
+.modal-close:hover {
   color: #2c3e50;
- }
+}
 
 /* MEDIA QUERIES */
 
